# django-afisha

./: .dockerignore  .gitignore  README.md  compose.yaml  pyproject.toml
apps/bookings/: models.py
apps/bookings/migrations/: 0001_initial.py
apps/events/: filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_alter_event_status.py  0003_event_tags.py  0004_event_events_even_descrip_9b2cb3_gin.py
apps/notifications/: models.py  service.py
apps/notifications/migrations/: 0001_initial.py
apps/tags/: models.py  serializer.py
apps/tags/migrations/: 0001_initial.py
apps/users/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
